added unit & integration tests
