# internal/models/meeting.go
@@ -5,10 +5,10 @@ import "time"
 type CreateMeetingReq struct {
 	Name        string  `json:"name" validate:"required"`
 	Description string  `json:"description"`
-	AdminID     int32   `json:"organizer_id"`
-	UserIDs     []int32 `json:"participants"`
-	From        string  `json:"from"` // 2022-01-02T15:00
-	To          string  `json:"to"`   // 2022-01-02T16:00
+	AdminID     int32   `json:"organizer_id" validate:"required"`
+	UserIDs     []int32 `json:"participants" validate:"required"`
+	From        string  `json:"from" validate:"required"` // 2022-01-02T15:00
+	To          string  `json:"to" validate:"required"`   // 2022-01-02T16:00
 }
 
 type MeetingInfoResponse struct {
